// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing App renders learn react link 1`] = `
.c0 {
  background: red;
}

<div
  class="c0 App"
>
  <h1>
    Home
  </h1>
  <p
    data-testid="word"
  />
</div>
`;

exports[`renders learn react link 1`] = `
.c0 {
  background: red;
}

<div
  class="c0 App"
>
  <h1>
    Home
  </h1>
</div>
`;
